# pico_ov2640

./: .gitignore  CMakeLists.txt  README.md
src/: config_board.h  image.pio  log.h  main.c  ov2640.c  ov2640.h  ov2640_defs.h  tusb_config.h  usb_descriptors.c  usb_itf.c  usb_itf.h
test/: ov_host.c
tools/: binary2image.py  camera_shell.py  covert.py  get_image.c  ov_host  ov_host.c
